[package]
name = "hidden_gems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
image = { version = "0.24.8" }
bitvec = "1"

[dev-dependencies]
proptest = "1.4.0"